[package]
name = "practice-cranelift-jit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cranelift = "0.86.1"
cranelift-codegen = "0.86.1"
cranelift-jit = "0.86.1"
cranelift-module = "0.86.1"
cranelift-native = "0.86.1"
cranelift-wasm = "0.86.1"
peg = "0.8.0"
